name:                matasano
version:             0.0.1
synopsis:            Matasano Cryptography Challenge solutions
homepage:            http://github.com/ilikebits/matasano#readme
license:             ISC
license-file:        LICENSE
author:              Lehao Zhang
maintainer:          leo@leozhang.me
copyright:           2015 Lehao Zhang
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules: Matasano
  other-modules:
    Util.Convert,
    Util.Cipher,

    Basics.HexToBase64,
    Basics.FixedXor,
    Basics.SingleByteXorCipher,
    Basics.DetectSingleCharacterXor,
    Basics.RepeatingKeyXor
    Basics.BreakRepeatingKeyXor,
    Basics.AESInECB
    Basics.DetectAESInECB
  build-depends:
    base,
    split,
    bytestring,
    base64-bytestring,
    cryptonite,
    memory
  default-language: Haskell2010

executable matasano
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base,
    matasano
  default-language: Haskell2010

test-suite matasano-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base,
    matasano,
    hspec
  default-language: Haskell2010
